--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <body>
 
 <form>
-<input class="button" type="text" value="Rock paper scissors">
+<input class="button" type="button" name="rock" type="submit">
 <input id="submit" type="submit">
 </form>
 
@@ -12,7 +12,7 @@
 
 
 <script>
-var playerSelection = document.getElementById("submit");
+var playerSelection = document.getElementById("submit").select();
 
 
 
