--- a/index.html
+++ b/index.html
@@ -1,57 +1,21 @@
 <html>
+<head>
+<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+</head>
 <body>
-<script>
-//var playerSelection = prompt();
-//console.log(playerSelection);
-// var computerSelection = computerPlay();
-//console.log(computerPlay);
+<div class="jumbotron">
+  <div class="row">
+    <div class="col-xs-12 text-center">
+      <h2> Choose your weapon </h2>
+      <button class="btn btn-primary" value="Rock" id="Rock">Rock</button>
+      <button class="btn btn-primary" value="Paper" id="Paper">Paper</button>
+      <button class="btn btn-primary" value="Scissors" id="Scissors">Scissors</button>
+      <p id="demo"></p>
+    </div>
+  </div>
+</div>
 
-const playerSelection = prompt();
-const computerSelection = computerPlay()
-console.log(playRound(playerSelection, computerSelection))
-
-
-
-function playRound(playerSelection, computerSelection) {
-  if (playerSelection === "Rock" && computerSelection === "Rock") {
-  return "Draw";
-  } else if (playerSelection === "Rock" && computerSelection === "Paper") {
-  return "Computer wins";
-  } else if (playerSelection === "Rock" && computerSelection === "Scissors") {
-  return "Player wins";
-  } else if (playerSelection === "Paper" && computerSelection === "Rock") {
-  return "Computer wins";
-  } else if (playerSelection === "Paper" && computerSelection === "Paper") {
-  return "draw";
-  } else if (playerSelection === "Paper" && computerSelection === "Scissors") {
-  return "Player wins";
-  } else if (playerSelection === "Scissors" && computerSelection === "Rock") {
-  return "Computer wins";
-  } else if (playerSelection === "Scissors" && computerSelection === "Paper") {
-  return "Player wins";
-  } else if (playerSelection === "Scissors" && computerSelection === "Scissors") {
-  return "draw";
-  }
-}
-console.log(playRound())
-
-function computerPlay(){
-  var myArray = [
-    "Rock",
-    "Paper",
-    "Scissors"
-  ];
-  var randomItem = myArray[Math.floor(Math.random()*myArray.length)];
-  return randomItem;
-}
-console.log(computerPlay());
-
-
-
-function oneRound(playerSelection, computerPlay) {
-
-}
-
-</script>
+<script src="script.js" type="text/javascript"></script>
 </body>
 </html>
