--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       <div class="col-xs-12 text-center">
         <h1 class="text-success"> Rock Paper Scissors </h1>
         <hr>
+        <h1>test</h1>
         <h2> Choose your weapon </h2>
         <button class="btn btn-primary" value="Rock" id="Rock">Rock</button>
         <button class="btn btn-primary" value="Paper" id="Paper">Paper</button>
